# TCPserver

./: .gitmodules  CMakeLists.txt
ConsoleHandling/include/: ConsoleHandler.h
ConsoleHandling/sources/: ConsoleHandler.cpp
Logging/include/: Logger.h
Logging/sources/: Logger.cpp
Network/include/: HandleConnection.h  Server.h
Network/sources/: HandleConnection.cpp  Server.cpp
Python/: MYSQLmain.py  authDB.py  dbInteraction.py
Python/Settings/: authData.cfg
RequestHandling/include/: RequestHandler.h
RequestHandling/sources/: RequestHandler.cpp
demo/: main.cpp
